# Crop-Net

./: .gitignore  README.md  convert_data.py  features.md  fetch_data.py  list_county.py  main.py  pyproject.toml  requirements.txt
configs/: ensemble_mean_all.yaml  residual_lstm_all.yaml  residual_lstm_weather.yaml
data/processed/pipeline_smoke/: multistage_cropnet_features.csv  ndvi_images.csv  usda_yield.csv  weather_manifest.csv
data/processed/segmentation_test_images/: README.md  manifest.csv
data/raw/tabular/: demo_weather.csv
data/sample_data/: manifest.json
docs/: PROJECT_QUICK_BRIEF.md  PROJECT_UNDERSTANDING_GUIDE.md  artifact_backup_manifest.md  cleanup_report.md  cropnet_workspace_evacuate_report.md  pre_commit_review.md
examples/: blank_fill_example.py  inference_example.py  train_example.py
models/: feature_contract_diagnostic.json
models/image_model/: segmentation_metadata.json  segmentation_model.pt
models/yield_model/: pipeline_smoke_multistage_yield_regressor.joblib  yield_regressor.joblib
models/yield_predictor/: config.json  model_specs.csv  run_status.json  scaler.csv
reports/: README_RESULTS_SUMMARY.md  README_feature_ablation_v1.md  README_model_comparison.md
reports/metrics/: pipeline_smoke_dataset_metadata.json  pipeline_smoke_multistage_yield_metrics.json  yield_metrics.json
reports/tables/: blank_fill_experiment_summary.csv  experiment_summary.csv  feature_ablation_known1_summary.csv  feature_ablation_summary.csv
scripts/: make_gui_demo_data.py  preprocessing.py
scripts/research/: analyze_blank_fill_diagnostics.py  build_broader_blank_fill_ensemble.py  cropnet_feature_forecasting_v12_server.py  generate_loss_plots.py  make_report_artifacts.py  run_controlled_model_comparison.py  summarize_experiments.py
src/crop_fusion_ai/: __init__.py  schemas.py
src/crop_fusion_ai/config/: __init__.py  schemas.py  settings.py
src/crop_fusion_ai/data/: __init__.py  fusion_features.py  weather_timeseries.py
src/crop_fusion_ai/data_sources/: __init__.py  cropnet_client.py  cropnet_schemas.py
src/crop_fusion_ai/gui/: __init__.py  app.py  controller.py  forecasting.py
src/crop_fusion_ai/inference/: __init__.py  extract_mobilenet_features.py  (+4 more)
src/cropnet_forecasting/: __init__.py  blank_fill.py  config.py  data.py  features.py  generate_sample_monthly.py  metrics.py  models.py  plotting.py  predictor.py  scaling.py  trainer.py  yield_regression.py
test_data/: manifest.json
tests/: test_convert_data.py  test_cropnet_client.py  test_cropnet_export.py  test_data_splits.py  test_evaluate_models.py  test_forecasting_directory.py  test_fusion_features.py  test_image_classifier.py  test_mobilenet_feature_extractor.py  test_model_loading.py  test_multistage_real_pipeline.py  test_multistage_yield_model.py  test_pipeline.py  test_preprocessing.py  test_schemas.py  test_segmentation_model.py  test_usda_dataset.py  test_weather_contract.py  test_yield_regressor.py
weights/: README_WEIGHTS.md  gru_best.pt  lstm_best.pt  model_specs.csv  tiny_mamba_ssm_best.pt  transformer_encoder_best.pt
(+26 files in other folders)
