[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crop-fusion-ai"
version = "0.1.0"
description = "Multi-modal crop health and yield prediction demo project."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Crop Fusion AI Team" },
]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "scikit-learn>=1.4",
    "joblib>=1.3",
    "pillow>=10.3",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8.2",
    "ruff>=0.4.8",
]
cropnet = [
    "cropnet>=0.2.1",
    "ecmwflibs>=0.6",
]
vision = [
    "torch>=2.2",
    "torchvision>=0.17",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]
exclude = ["build"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "N",
    "ANN",
]

[tool.ruff.lint.per-file-ignores]
"src/crop_fusion_ai/data_sources/cropnet_client.py" = [
    "N802",
]
"tests/test_cropnet_client.py" = [
    "N802",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
packages = ["crop_fusion_ai"]
strict = true
warn_unreachable = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "joblib",
    "matplotlib",
    "matplotlib.*",
    "pandas",
    "sklearn.*",
    "torch",
    "torchvision",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]
