[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crop-fusion-ai"
version = "0.1.0"
description = "Multi-modal crop health and yield prediction demo project."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Crop Fusion AI Team" },
]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "huggingface_hub>=0.24",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "scikit-learn>=1.4",
    "pillow>=10.3",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8.2",
    "ruff>=0.4.8",
]

[project.scripts]
crop-fusion-gui = "crop_fusion_ai.gui.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "N",
    "ANN",
]
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
packages = ["crop_fusion_ai"]
strict = true
warn_unreachable = true
pretty = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]
